Fix text wrap in service card button

--- a/src/widgets/ui/elements/ServiceCard/ServiceCard.module.scss
+++ b/src/widgets/ui/elements/ServiceCard/ServiceCard.module.scss
@@ -199,7 +199,7 @@
 	}
 }
 .button {
-	text-wrap: nowrap;
+	text-wrap: nowrap !important;
 }
 .footer {
 	display: flex;
